# aliyun-log-memory-sdk

./: .gitignore  LICENSE  MANIFEST.in  README.md  client.py  example.py  pyproject.toml  setup.py  usage.md
sls_memory/: __init__.py  client.py  exceptions.py
